--- a/less/main-content-about-page.less
+++ b/less/main-content-about-page.less
@@ -159,6 +159,17 @@
             order:19 ;
         }//closes out the jroge text media phone 
     }//closes out the jorge text class
+    .imagerick{
+        @media @phone{
+            order:20
+        }//closes out rick media phone view
+    }//closes out rick text class
+    
+    .textrick{
+        @media @phone{
+            order:21;
+        }//closes out rick image media at phone view 
+    }//closes out rick image class
 
     .box1, .box3, .box5, .box7, .box9, .box11, .box13, .box15{
         width:30%;            
