changed the order of the people

--- a/less/main-content-about-page.less
+++ b/less/main-content-about-page.less
@@ -171,7 +171,7 @@
         }//closes out rick image media at phone view 
     }//closes out rick image class
 
-    .box1, .box3, .box5, .box7, .box9, .box11, .box13, .box15{
+    .box1{
         width:30%;            
         background: linear-gradient(to right, @greyColor, @greenColor);
         border-radius: 10px;   
@@ -195,7 +195,7 @@
         }//closes out the circle class
     }//close out the box1-15 selector odd
 
-    .box2, .box4, .box6, .box8, .box10, .box12, .box14, .box16{
+    .box2{
         width:60%;
 
         @media @tablet{
