trying to find the bug

--- a/less/main-content-about-page.less
+++ b/less/main-content-about-page.less
@@ -170,6 +170,11 @@
             order:21;
         }//closes out rick image media at phone view 
     }//closes out rick image class
+    .iraimage{
+        @media @phone{
+            order:22;
+        }
+    }
 
     .box1{
         width:30%;            
