--- a/CSS/index.css
+++ b/CSS/index.css
@@ -452,6 +452,11 @@ h6 {
     order: 21;
   }
 }
+@media (max-width: 500px) {
+  .container .iraimage {
+    order: 22;
+  }
+}
 .container .box1 {
   width: 30%;
   background: linear-gradient(to right, #d9d9d9, #2e6a2d);
