finished my project just waiting on the link, I found the bug

--- a/less/main-content-about-page.less
+++ b/less/main-content-about-page.less
@@ -170,11 +170,11 @@
             order:21;
         }//closes out rick image media at phone view 
     }//closes out rick image class
-    .iraimage{
+    .imageira{
         @media @phone{
             order:22;
-        }
-    }
+        }//closes out the ira image phone view class
+    }//closes out the ira image class
 
     .box1{
         width:30%;            
